fix z-index [ci skip]

--- a/style/main.css
+++ b/style/main.css
@@ -157,7 +157,6 @@ nav a {
   position: absolute;
   top: 78px;
   width: 100%;
-  z-index: 1;
 }
 
 nav a {
